force-app/main/default/objects/BGR_RTG__c/BGR_RTG__c.object-meta.xml
<CustomObject>
    <label>BGR RTG</label>
    <nameField>
        <label>BGR RTG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>