force-app/main/default/objects/BGR_RTG__c/fields/PIECESPERHOUR__c.field-meta.xml
<CustomField>
    <fullName>PIECESPERHOUR__c</fullName>
    <label>PIECESPERHOUR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>