force-app/main/default/objects/BGR_RTG__c/fields/QUEUE__c.field-meta.xml
<CustomField>
    <fullName>QUEUE__c</fullName>
    <label>QUEUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>