force-app/main/default/objects/BGR_RTG__c/fields/SETUP__c.field-meta.xml
<CustomField>
    <fullName>SETUP__c</fullName>
    <label>SETUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>