force-app/main/default/objects/BGR_RTG__c/fields/WORKCENTER__c.field-meta.xml
<CustomField>
    <fullName>WORKCENTER__c</fullName>
    <label>WORKCENTER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>