force-app/main/default/objects/BGR_RTG__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Operation__c</columns>
    <columns>WORKCELL__c</columns>
    <columns>QUEUE__c</columns>
    <columns>PIECESPERHOUR__c</columns>
    <columns>WORKCENTER__c</columns>
    <columns>SETUP__c</columns>
    <columns>DESCR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>